--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -1,16 +1,19 @@
 .root {
     main-color: rgb(237, 255, 242);       /* Create a looked-up color called "main-color" within root. */
-    -fx-background-color: main-color;
+    -fx-background-image: url("../images/background.jpg"); /* Set image */
+    -fx-background-size: stretch;
 }
 
 .text-field {
-    -fx-background-color: #d9ffe2;
-    -fx-font: 20px "Arial";
+    -fx-background-color: #97c0a8;
+    -fx-font: 15px "Verdana";
+    -fx-text-fill: #103a0b;
 }
 
 .button {
-    -fx-background-color: mediumspringgreen;
-    -fx-font: italic bold 16px "Arial";
+    -fx-background-color: #5c6956;
+    -fx-font: italic bold 16px "Verdana";
+    -fx-text-fill: white;
 }
 
 .button:hover {
@@ -34,7 +37,7 @@
 }
 
 .scroll-bar .thumb {
-    -fx-background-color: #ff9cb4;
+    -fx-background-color: #f2b8c6;
     -fx-background-radius: 1em;
 }
 
